# glm_flash_demo

./: .gitignore  ACTUAL_FIX_STATUS.md  CLAUDE.md  CODE_REVIEW_FIXES_SUMMARY.md  CODE_REVIEW_ISSUES.md  QUOTA_DESIGN.md  README.md  RUST_PROXY_DESIGN.md  glm_client.py  main.py  pyproject.toml  官方文档.txt
deepseek_proxy/: .gitignore  AGENTS.md  CODE_REVIEW.md  CROSS_COMPILE.md  Cargo.toml  LOGGING.md  OBSERVABILITY_SECURITY_设计与使用说明.md  PROJECT_REVIEW.md  README.md  USER_ACTIVITY_LOGS.md  build-linux-simple.ps1  build-linux.ps1  build-wsl.ps1  config.toml  install_x86_linux.ps1  start.ps1  test_concurrent.py  test_deepseek.py  test_non_stream.py  test_proxy.py  test_rate_limit.py  test_stability.py  深度审查报告_20251101.md
deepseek_proxy/data/quotas/: admin.json  test_newuser.json  user1.json
deepseek_proxy/data/users/: 123test.toml  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.toml  abc.toml  admin.toml  test-user.toml  test_newuser.toml  test_user.toml  user1.toml  user123.toml  user2.toml
deepseek_proxy/docs/: CAPACITY_ESTIMATION.md  PERFORMANCE.md  QUICKSTART.md  RUST_PROXY_DESIGN.md  ds_CODE_REVIEW.md  深度审查报告_20251101.md  计费与营收建模设计备忘录.md  项目功能改进建议_审阅稿.md
deepseek_proxy/src/: config.rs  error.rs  logger.rs  main.rs  main.rs代码讲解.md  metrics.rs  user_activity.rs  utils.rs
deepseek_proxy/src/admin/: handler.rs  middleware.rs  mod.rs
deepseek_proxy/src/auth/: bruteforce.rs  handler.rs  jwt.rs  middleware.rs  mod.rs  user_manager.rs
deepseek_proxy/src/deepseek/: client.rs
deepseek_proxy/src/proxy/: handler.rs  limiter.rs  mod.rs  rate_limiter.rs
glm_proxy/: .env.example  (+11 more)
(+16 files in other folders)
